2007-02-01  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: Fixes for building on Cygwin from
	yselkowitz@users.sourceforge.net.  Closes bug #9726

2007-01-28  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: bump rev to 1.2.5

2007-01-28  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/reference/Doxyfile.in: fixes building the cairomm documentation where
	builddir != srcdir.  Patch from yselkowitz@users.sourceforge.net for bug
	#9727

1.2.4:

2007-01-17  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: updated news for 1.2.4 release
	* configure.in: bumped version to 1.2.4

2006-09-27  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: cast_static() and cast_dynamic(): 
	Use the refcount_() accessor instead of the member variable, 
	to avoid compilation errors, as we already do in the 
	templated copy constructor.

1.2.2:

2006-08-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: update for 1.2.2
	* configure.in: bump to next even number (1.2.2)

2006-08-21  Cedric Gustin  <cedric.gustin@gmail.com>

	* cairomm/win32_surface.cc: Explicitly cast Cairo::Format to
	cairo_format_t.
	
2006-08-20  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: fix up the release announcement template to explain what
	cairomm is at the top of the email before telling where to get it.
	* configure.in: post-release bump (1.2.1)

1.2.0:

2006-08-20  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: Update information about new stuff in 1.2.0
	* configure.in: bump the release version number to 1.2.0 and the shared
	library version number to 1:0:0 since interfaces were changed and added and
	we're now guaranteeing API/ABI stability

2006-08-20  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/pdf-surface/.cvsignore:
	* examples/png_file/.cvsignore:
	* examples/ps-surface/.cvsignore:
	* examples/svg-surface/.cvsignore: added image files produced by the example
	programs to .cvsignore
