@@ -110,8 +110,9 @@ typedef enum
     FORMAT_ARGB32 = CAIRO_FORMAT_ARGB32,
     FORMAT_RGB24 = CAIRO_FORMAT_RGB24,
     FORMAT_A8 = CAIRO_FORMAT_A8,
-    FORMAT_A1 = CAIRO_FORMAT_A1,
-    FORMAT_RGB16_565 = CAIRO_FORMAT_RGB16_565
+    FORMAT_A1 = CAIRO_FORMAT_A1
+    // this enumeration has been deprecated
+    //FORMAT_RGB16_565 = CAIRO_FORMAT_RGB16_565
 } Format;
 
 
@@ -175,7 +176,8 @@ typedef enum
     SURFACE_TYPE_WIN32 = CAIRO_SURFACE_TYPE_WIN32,
     SURFACE_TYPE_BEOS = CAIRO_SURFACE_TYPE_BEOS,
     SURFACE_TYPE_DIRECTFB = CAIRO_SURFACE_TYPE_DIRECTFB,
-    SURFACE_TYPE_SVG = CAIRO_SURFACE_TYPE_SVG
+    SURFACE_TYPE_SVG = CAIRO_SURFACE_TYPE_SVG,
+    SURFACE_TYPE_OS2 = CAIRO_SURFACE_TYPE_OS2
 } SurfaceType;
 
 typedef enum
