@@ -2,8 +2,8 @@ AC_INIT(cairomm/cairomm.h)
 
 #release versioning
 GENERIC_MAJOR_VERSION=1
-GENERIC_MINOR_VERSION=2
-GENERIC_MICRO_VERSION=5
+GENERIC_MINOR_VERSION=3
+GENERIC_MICRO_VERSION=0
 GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
 AC_SUBST(GENERIC_MAJOR_VERSION)
 AC_SUBST(GENERIC_MINOR_VERSION)
@@ -11,7 +11,7 @@ AC_SUBST(GENERIC_MICRO_VERSION)
 AC_SUBST(GENERIC_VERSION)
 
 #shared library versioning
-GENERIC_LIBRARY_VERSION=1:0:0
+GENERIC_LIBRARY_VERSION=1:1:1
 #                       | | |
 #                +------+ | +---+
 #                |        |     |
@@ -101,7 +101,7 @@ fi
 
 AC_CHECK_HEADERS(string list map, , exit)
 
-PKG_CHECK_MODULES(CAIROMM, cairo >= 1.2.0)
+PKG_CHECK_MODULES(CAIROMM, cairo >= 1.3.10)
 
 
 dnl Check whether to build the documentation directory
