@@ -1,3 +1,14 @@
+2007-03-21  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* cairomm/context.cc:
+	* cairomm/context.h:
+	* cairomm/enums.h:
+	* cairomm/pattern.cc:
+	* cairomm/pattern.h:
+	* configure.in: Add initial support for new cairo 1.4.x API.  It will
+	probably still need quite a bit of work, but I wanted to commit what I have
+	now so that it doesn't keep sitting in my working directory.
+
 2007-02-01  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* configure.in: Fixes for building on Cygwin from
